@@ -1,3 +1,10 @@
+2009-07-03  David Grundberg  <individ@acc.umu.se>
+
+	* pytave.cc: Sorted includes.
+	(atexit): New function. Call do_octave_atexit before Python
+	unloads shared libraries.
+	* package/pytave.py (_atexit): New function.
+
 2009-07-01  David Grundberg  <individ@acc.umu.se>
 
 	* pytave.cc [HAVE_USELOCALE] (init, func_eval, str_eval): Run
